--- a/simplon.css
+++ b/simplon.css
@@ -1,7 +1,12 @@
-
+ *{
+  margin: 0;
+  padding: 0;
+   box-sizing: border-box;  
+} 
 body{
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr))
-}.img1{
+}
+.img1{
 width: 60px;
 height: 60px;
 display: flex;
@@ -34,13 +39,14 @@ border-radius: 18px;
     border-radius: 14px;
 }
 .img3{
-    width:  60px;
-    height: 65px;
+    width:  35px;
+    height: 35px;
 }
 .img2{
-    width: 234px;
-    height: 134px;
+    width: 400px;
+    height: 400px;
     margin: 6px;
+    margin-left: 41px;
 }
 section{
     background-color: white;
@@ -48,11 +54,34 @@ section{
     margin-top: 19px;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    gap:64px;
 
     
 }
+.para{
+  font-size: 34px;
+  text-align: center;
+  text-shadow: rgb(5, 96, 74)  3px 2px 4px;
+  margin-top: 72px;
+}
+button{
+  padding: 12px;
+  border-radius: 12px;
+  width: 450px;
+  text-decoration: none;
+  background-color:#04523b;
+  margin-top: 46px;
+}
+button a{
+  text-decoration: none;
+  color: white;
+
+}
+button:hover{
+  background-color: #537D5D;
+}
 h1{
- font-size: 109px;   
+ font-size: 80px;   
  display: flex;
  justify-content: center;
  margin-top: 3px;
@@ -60,11 +89,17 @@ h1{
 }
 h2.titre{
 display: flex;   
-justify-content: end; 
-font-size: 60px;
+justify-content: center; 
+font-size: 30px;
 
 
 }
+.titre{
+  text-align: center;
+  padding: 3px;
+  
+}
+
  .histoire {
   background: #A1B57D;
   color: white;
@@ -202,7 +237,13 @@ font-size: 60px;
   background-color: rgb(225, 217, 217);
   padding: 12px;
   margin: 12px;
+ 
 
+}
+.card41{
+   display: flex;
+  justify-content: space-between;
+  gap: 12px;
 }
 .card4 h3{
   text-align: center;
@@ -217,6 +258,7 @@ font-size: 60px;
   width: 498px;
 
 }
+
 @media (max-width: 768px) {
       body {
         font-size: 16px;
@@ -234,4 +276,5 @@ font-size: 60px;
       color: white;
       text-align: center;
     }
+
     
